第一次-失败的尝试/example/libtmuxcore.h

/* ----------- Opaque handles ----------- */
typedef struct tmc_server      tmc_server;
typedef struct tmc_client      tmc_client;   /* a GUI attachment (Ghostty view) */
/* ----------- Error codes ----------- */
typedef enum {
    TMC_OK = 0,
    TMC_ERR_UNKNOWN = -1,
    TMC_ERR_INVALID = -2,
    TMC_ERR_NOMEM = -3,
    TMC_ERR_BUSY = -4,
    TMC_ERR_NOTFOUND = -5,
    TMC_ERR_PERM = -6,
} tmc_err;
/* ----------- Event-loop bridge (host provided) ----------- */
typedef struct tmc_io tmc_io;
typedef struct {
    /* Add an fd watcher; return a handle (>=0) or negative error. */
    int   (*add_fd)(tmc_io* io, int fd, int events, tmc_io_fd_cb cb, void* user);
    int   (*mod_fd)(tmc_io* io, int handle, int events);
    void  (*del_fd)(tmc_io* io, int handle);

    /* One-shot or repeating timers; if interval_ms==0, treat as one-shot. Returns handle */
    int   (*add_timer)(tmc_io* io, uint64_t interval_ms, int repeat, tmc_io_timer_cb cb, void* user);
    void  (*del_timer)(tmc_io* io, int handle);

    /* Post a function into host loop thread (optional, may be NULL) */
    void  (*post)(tmc_io* io, void (*fn)(void*), void* user);
} tmc_loop_vtable;
typedef struct {
    void (*on_grid)(tmc_server*, const tmc_grid_update*, void* user);
    void (*on_layout)(tmc_server*, const tmc_layout_update*, void* user);
    void (*on_title)(tmc_server*, uint32_t pane_id, const char* title, void* user);
    void (*on_renamed)(tmc_server*, uint32_t window_id, const char* name, void* user);
    void (*on_session)(tmc_server*, uint32_t session_id, const char* name, int created, void* user);
    void (*on_copy_mode)(tmc_server*, const tmc_copy_mode_state*, void* user);
    void (*on_process_exit)(tmc_server*, uint32_t pane_id, int status, void* user);
    void (*on_message)(tmc_server*, const char* msg, void* user);
} tmc_ui_vtable;
/* ----------- Server configuration ----------- */
typedef struct {
    const char* default_shell;   /* NULL => inherit */
    const char* default_command; /* NULL => login shell */
    const char* default_cwd;     /* NULL => inherit */
    const char* socket_path;     /* NULL => anonymous in-proc */
    int history_limit;           /* -1 => tmux default */
    int mouse;                   /* 0/1 */
} tmc_server_config;
typedef struct {
    tmc_key_kind kind;
    uint32_t mods;
    union {
        struct { char ch; } ascii;
        struct { uint32_t codepoint; } cp;
        struct { uint8_t keycode; } func; /* 1..24 */
        struct { uint16_t special; } sp;
    } u;
} tmc_key_event;
typedef struct {
    uint32_t pane_id;
    uint16_t x, y;
    uint8_t  button; /* 0=move,1=left,2=middle,3=right,4=wheel-up,5=wheel-down */
    uint8_t  pressed; /* 0/1 for buttons; ignored for wheel */
    uint32_t mods;
} tmc_mouse_event;
/* ----------- Public API ----------- */
TMC_API const char* tmc_version(void); /* returns tmux version string */
TMC_API uint32_t    tmc_api_version(void); /* returns TMC_API_VERSION */
TMC_API tmc_server* tmc_server_new(const tmc_server_config* cfg,
                                   const tmc_loop_vtable* loop,
                                   tmc_io* loop_instance,
                                   const tmc_ui_vtable* ui,
                                   void* ui_user);
TMC_API void        tmc_server_free(tmc_server* s);
/* Create a GUI attachment (maps to tmux client internally) */
TMC_API tmc_client* tmc_client_attach(tmc_server* s, uint32_t session_id,
                                      uint32_t rows, uint32_t cols);
TMC_API void        tmc_client_detach(tmc_client* c);
TMC_API void        tmc_client_resize(tmc_client* c, uint32_t rows, uint32_t cols);
/* Input to focused pane of a client (or by pane id) */
TMC_API tmc_err     tmc_send_keys(tmc_client* c, const tmc_key_event* keys, size_t count);
TMC_API tmc_err     tmc_send_text(tmc_client* c, const char* utf8, size_t len);
TMC_API tmc_err     tmc_mouse(tmc_client* c, const tmc_mouse_event* ev);